# MMA

./: .gitignore  Makefile  README.md  README.txt  index.html  package-lock.json  package.json  pyproject.toml  run.sh  vercel-build.sh  vercel.json  vite.config.ts
Backend/: .gitignore  README.md  pyproject.toml  requirements.txt  vercel.json
Backend/data/: __init__.py  initiate_db.py  serializers.py  urls.py  views.py  viewset.py
Backend/data/migrations/: 0001_initial.py  0002_alter_mygovhouseholdincomeandexpenditurestates_gini_and_more.py  0003_host_acronyms.py
Backend/main/: settings.py
Backend/temp/: db1.sqlite3
Backend/test/other/: test_dosm.py  test_serializer.py
Frontend/: README.md  package-lock.json  tsconfig.app.json
Frontend/src/: http.js
Frontend/src/components/: Footer.vue
Frontend/src/router/: index.ts
Frontend/src/views/: AnalysisView.vue  HomeView.vue
assets/: AboutView-CyZH_puP.js  AboutView-De_zgpRG.js  AboutView-Dn-ADKDy.js  index-C2pG1eL2.css  index-Ca8hLZTy.js  index-D1WYRVVF.js  index-DGXz-dFW.css  index-qxWtnCrx.css  primevue-DEuAHT6C.js  primevue-X-fBYq26.css
data/: enums.py  initiate_db.py  models.py
data/migrations/: 0001_initial.py
data/src/: common.py  updater.py
data/templates/data/: table_response_json.html
database/: db.sqlite3
main/: settings.py  urls.py
src/: App.vue  http.js  main.ts
src/assets/: base.css  main.css
src/components/: Footer.vue  NavBar.vue  NavButton.vue
src/components/buttons/: buttonV1.vue
src/components/modals/: ModalV1.vue
src/views/: DataCatalogueView.vue
(+4 files in other folders)
