[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["FazreilieAlep <mrparksaereilee@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
djangorestframework = "^3.15.1"
django-cors-headers = "^4.3.1"
requests = "^2.32.2"
whitenoise = "^6.6.0"
npm = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
